Fri Mar 27 21:01:17 1998  Owen Taylor  <owt1@cornell.edu>

	* gdk/gdk.c (gdk_event_translate): Don't call
	XTranslateCoordinates on a destroyed window. (Why do we
	do event processing at all on destroyed windows when we
	throw out the results?)

	* gtk/gtklabel.c: Clear the background when changing style/
	state.

Fri Mar 27 16:35:00 PST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 0.99.9
	
	* examples: added a couple more, fixed some Makefiles

Fri Mar 27 17:58:41 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkhandlebox.c (gtk_handle_box_paint): Don't clear
	the window on an expose event. On draws, just clear the
	portion we are redrawing.

	* gdk/gdkfont.c (gdk_fontset_load): Corrected calculation
	of fontset ascent/descent.

	* gtk/gtkwidget.[ch]: Added new function to show a toplevel
	window and wait for it to be mapped, gtk_window_show_now ()

Fri Mar 27 08:51:17 PST 1998 Shawn T. Amundson <amundson@gtk.org>

	* docs/Makefile.sgml: some stuff for doing plain text and
	  postscript

Fri Mar 27 00:13:18 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmain.c (gtk_propagate_event): If the widget is _not_
	a descendant of a Window widget, propagate key presses like
	other events.

	* gtk/gtkentry.c gtk/gtktext.c: Ignore multiple simultaneous
	button presses instead of treating subsequent presses as
	release/press pairs for tablet compatibility.

	* configure.in config.h.in: Removed inline checks, because they
	are duplicated in glib.

	* gtk/gtkwidget.c (gtk_widget_draw): When gtk_widget_draw ()
	occurs with queued draw already in place, redraw _entire_
	widget. (Pointed out by Tim Janik)

Thu Mar 26 23:12:54 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_propagate_event): make a clear distinction between
	key press/release events, which will be sent to a widgets toplevel
	ancestor and be forwarded from there, and all other events that need to
 	get propagated up the widget tree (pointed out by Owen Taylor).
